--- a/tdd/sample/package.json
+++ b/tdd/sample/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^3.4.34",
+    "@types/mocha": "^2.2.35",
     "chai": "^3.5.0",
     "mocha": "^3.2.0"
   }
