--- a/async/promises/package.json
+++ b/async/promises/package.json
@@ -7,16 +7,14 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "node_modules/mocha/bin/_mocha"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "chai": "^3.5.0",
-    "chai-as-promised": "^5.3.0",
+    "chai-as-promised": "^6.0.0",
+    "fs-promise": "1.0.0",
     "mocha": "^3.0.1"
-  },
-  "dependencies": {
-    "fs-promise": "^0.5.0"
   }
 }
