--- a/testangular2/todo/package.json
+++ b/testangular2/todo/package.json
@@ -12,41 +12,41 @@
     "test-integration": "protractor"
   },
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.4",
-    "@angular/compiler": "^2.0.0-rc.4",
-    "@angular/core": "^2.0.0-rc.4",    
-    "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.4",
+    "@angular/compiler": "2.4.5",
+    "@angular/core": "2.4.5",
+    "@angular/common": "2.4.5",
+    "@angular/forms": "2.4.5",
+    "@angular/http": "2.4.5",
     "@angular/platform-browser": "^2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
     "rxjs": "^5.0.0-beta.6",
-    "reflect-metadata": "0.1.3",
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
+    "reflect-metadata": "0.1.9",
+    "body-parser": "~1.16.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.0",
+    "express": "~4.14.0",
     "jade": "~1.11.0",
-    "mongodb": "~2.1.13",
-    "morgan": "~1.6.1",
+    "mongodb": "~2.2.22",
+    "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
-    "zone.js": "^0.6.12"
+    "zone.js": "^0.7.6"
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "chai-as-promised": "^5.3.0",
+    "chai-as-promised": "^6.0.0",
     "istanbul": "^0.4.2",
-    "mocha": "^2.4.5",
-    "karma": "^0.13.22",
+    "mocha": "^3.2.0",
+    "karma": "^1.4.0",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.2.3",
+    "karma-chrome-launcher": "^2.0.0",
     "karma-clear-screen-reporter": "^1.0.0",
-    "karma-cli": "^0.1.2",
-    "karma-coverage": "^0.5.5",
-    "karma-mocha": "^0.2.2",
+    "karma-cli": "^1.0.1",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "^1.3.0",
     "karma-sinon": "^1.0.4",
     "karma-sinon-chai": "^1.2.0",
-    "protractor": "^3.3.0",
-    "sinon": "1.17.3",
+    "protractor": "^5.0.0",
+    "sinon": "1.17.7",
     "sinon-chai": "^2.8.0"
   }
 }
